tests/resource/valid/access/dictionary_access.mamba
x := { "asd": 10, "fgh": 20}

x["asdf"]
