tests/resource/invalid/type/access/access_string_dict_with_int.mamba
x = { "asd": 10, "fgh": 20}

x[10]
